fix: remove bug where card maintains static size even on small devices

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,8 +1,9 @@
 .card {
     height: 260px;
-    width: 520px;
+    width: auto;
     box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.14) !important;
     margin: 20px;
+    padding: 20px 35px;
     text-align: center;
     background-color: #fbfbfb;
 }
